# mars_rover_intern_Tasks

./: README.md
ROS2_TASK1_WS_HERE/: README.md
ROS2_TASK1_WS_HERE/cpp_pkg/: CMakeLists.txt  package.xml
ROS2_TASK1_WS_HERE/ros2_task1/: package.xml
ROS2_TASK1_WS_HERE/ros2_task1/ros2_task1/: node1.py
ROS2_TASK2_WS_HERE/: README.md  README_PART2.md
ROS2_TASK2_WS_HERE/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_TASK2_WS_HERE/log/: latest_build
ROS2_TASK2_WS_HERE/src/circle_patrol/: CMakeLists.txt  package.xml
ROS2_TASK2_WS_HERE/src/circle_patrol_py/: package.xml  setup.cfg  setup.py
ROS2_TASK2_WS_HERE/src/circle_patrol_py/circle_patrol_py/: client.py  client_new.py  server.py  server_new  server_new.py
ROS2_TASK2_WS_HERE/src/circle_patrol_py/launch/: patrol_launch.py
ROS2_TASK2_WS_HERE/src/collision_avoidance/: package.xml  setup.py
ROS2_TASK3_WS_HERE/: README.md
ROS2_TASK3_WS_HERE/TF_IMAGES/: frames_2026-06-03_23.00.25.gv
ROS2_TASK3_WS_HERE/src/gx_xplore/: package.xml  setup.cfg  setup.py
ROS2_TASK4_WS_HERE/: README.md  launch_file.py  my_robo_3.urdf  my_world.sdf
ROS2_TASK4_WS_HERE/demo_file/: Screencast from 06-17-2026 08:47:25 PM.webm  Screencast from 06-17-2026 08:50:01 PM.webm
ROS2_TASK4_WS_HERE/robo_pkg/: arm_controllers.yaml  launch_file.py  my_robo_3.urdf  my_world.sdf
cpp_pkg/src/: cpp_publisher.cpp  node3cpp.cpp
cpp_pkg/srv/: SetSpeed.srv
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/srv/: SetSpeed.srv
ros2_task1/: setup.cfg  setup.py
ros2_task1/ros2_task1/: node1.py  node2.py
(+47 files in other folders)
